# mood

./: Cargo.toml  README.md  test_data.csv  test_entry_insertion.db  test_field_creation.db  test_import.db  test_trend.db  test_trends.csv  test_trends.xlsx
src/: analysis.rs  db.rs  main.rs  util.rs
