[package]
name = "mood"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# trendar = { path = "D:\\Programs\\trendar" }
time = "*"
clap = { version = "3.1.14", features = ["derive"] }
anyhow = "1.0.57"
chrono = "0.4.19"
csv = "1.1.6"
dirs = "4.0.0"

[dependencies.rusqlite]
version = "0.27"
features = ["bundled", "functions"]
